[gd_scene load_steps=27 format=3 uid="uid://cq38hnb276qij"]

[ext_resource type="Script" path="res://game/levels/level1/level-1.gd" id="1_4cva0"]
[ext_resource type="Environment" uid="uid://c1jsw4puq6pku" path="res://assets/environments/level1.tres" id="2_1xg0j"]
[ext_resource type="PackedScene" uid="uid://bev5tc1uhkp1j" path="res://assets/entities/interactables/interactable.tscn" id="3_8jt48"]
[ext_resource type="PackedScene" uid="uid://5qjkfwpj02jt" path="res://assets/modules/game_over/game_over.tscn" id="3_ms5ps"]
[ext_resource type="Script" path="res://assets/entities/interactables/civilian_module/civilian_system.gd" id="5_6peey"]
[ext_resource type="PackedScene" uid="uid://dfv6t4ldj2v1p" path="res://assets/entities/interactables/drop_area.tscn" id="6_8vgsb"]
[ext_resource type="PackedScene" uid="uid://c55ams3nst3h4" path="res://assets/entities/interactables/civilian.tscn" id="7_djlvh"]
[ext_resource type="Script" path="res://entities/PlayableCharacterAbstract.gd" id="14_lfhxd"]
[ext_resource type="Script" path="res://assets/modules/fire_system/fire_system.gd" id="15_5kx7t"]
[ext_resource type="PackedScene" uid="uid://c7lfbpnhhs0hr" path="res://assets/entities/fire/cube_fire.tscn" id="16_3i5jn"]
[ext_resource type="Script" path="res://assets/entities/interactables/evidencesystem.gd" id="17_clq06"]
[ext_resource type="PackedScene" uid="uid://crcx0uou65ta" path="res://assets/entities/interactables/pcs/pc.tscn" id="18_564cr"]
[ext_resource type="PackedScene" uid="uid://dghldiyml77bh" path="res://entities/PlayableCharacter.tscn" id="19_i3nvy"]
[ext_resource type="PackedScene" uid="uid://dlbi6sd7k5emq" path="res://assets/entities/interactables/breakable.tscn" id="20_wtn17"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_n042r"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_b3lka"]
albedo_color = Color(0.45, 0.45, 0.45, 1)

[sub_resource type="BoxMesh" id="BoxMesh_ol0mq"]
material = SubResource("StandardMaterial3D_b3lka")
size = Vector3(20, 1, 20)

[sub_resource type="BoxShape3D" id="BoxShape3D_qttcl"]
size = Vector3(20, 1, 20)

[sub_resource type="BoxShape3D" id="BoxShape3D_mnnrh"]
size = Vector3(20, 1, 20)

[sub_resource type="BoxMesh" id="BoxMesh_5lm7w"]
material = SubResource("StandardMaterial3D_b3lka")
size = Vector3(20, 7, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_vxusw"]
size = Vector3(20, 7, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_nnyc2"]
transparency = 1
shading_mode = 0
vertex_color_use_as_albedo = true

[sub_resource type="SphereMesh" id="SphereMesh_6neps"]
material = SubResource("StandardMaterial3D_nnyc2")
radial_segments = 8
rings = 4

[sub_resource type="Curve" id="Curve_2enan"]
_data = [Vector2(0, 0.320755), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Gradient" id="Gradient_js6bg"]
colors = PackedColorArray(0.140447, 0.140447, 0.140447, 1, 0.534361, 0.534361, 0.534361, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_eqofl"]
size = Vector3(100, 30, 100)

[node name="Level-1" type="Node3D" node_paths=PackedStringArray("quests")]
script = ExtResource("1_4cva0")
quests = [NodePath("civilian_system"), NodePath("fire_system"), NodePath("pcs")]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource("2_1xg0j")

[node name="game_over" parent="." instance=ExtResource("3_ms5ps")]
unique_name_in_owner = true

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.830637, -0.0535748, -0.554231, 0.26487, -0.837515, 0.477925, -0.489781, -0.543782, -0.681481, 0, 2.32634, 4.29147)
layers = 524289
light_color = Color(0.99917, 0.947104, 0.85874, 1)
light_energy = 1.625
light_indirect_energy = 1.525
light_volumetric_fog_energy = 0.0
shadow_enabled = true

[node name="World" type="Node3D" parent="."]

[node name="bottom" type="StaticBody3D" parent="World"]
collision_layer = 3
collision_mask = 3
physics_material_override = SubResource("PhysicsMaterial_n042r")
metadata/_edit_lock_ = true

[node name="MeshInstance3D" type="MeshInstance3D" parent="World/bottom"]
mesh = SubResource("BoxMesh_ol0mq")
skeleton = NodePath("../../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="World/bottom"]
shape = SubResource("BoxShape3D_qttcl")

[node name="top" type="StaticBody3D" parent="World"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 6, 0)
collision_layer = 3
collision_mask = 3
physics_material_override = SubResource("PhysicsMaterial_n042r")

[node name="MeshInstance3D" type="MeshInstance3D" parent="World/top"]
mesh = SubResource("BoxMesh_ol0mq")
skeleton = NodePath("../../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="World/top"]
shape = SubResource("BoxShape3D_mnnrh")

[node name="top2" type="StaticBody3D" parent="World"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, 10)
collision_layer = 3
collision_mask = 3
physics_material_override = SubResource("PhysicsMaterial_n042r")

[node name="MeshInstance3D" type="MeshInstance3D" parent="World/top2"]
mesh = SubResource("BoxMesh_5lm7w")
skeleton = NodePath("../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="World/top2"]
shape = SubResource("BoxShape3D_vxusw")

[node name="top5" type="StaticBody3D" parent="World"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, -10)
collision_layer = 3
collision_mask = 3
physics_material_override = SubResource("PhysicsMaterial_n042r")

[node name="MeshInstance3D" type="MeshInstance3D" parent="World/top5"]
mesh = SubResource("BoxMesh_5lm7w")
skeleton = NodePath("../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="World/top5"]
shape = SubResource("BoxShape3D_vxusw")

[node name="top3" type="StaticBody3D" parent="World"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -10, 3, 0)
collision_layer = 3
collision_mask = 3
physics_material_override = SubResource("PhysicsMaterial_n042r")

[node name="MeshInstance3D" type="MeshInstance3D" parent="World/top3"]
mesh = SubResource("BoxMesh_5lm7w")
skeleton = NodePath("../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="World/top3"]
shape = SubResource("BoxShape3D_vxusw")

[node name="top4" type="StaticBody3D" parent="World"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 10, 3, 0)
collision_layer = 3
collision_mask = 3
physics_material_override = SubResource("PhysicsMaterial_n042r")

[node name="MeshInstance3D" type="MeshInstance3D" parent="World/top4"]
mesh = SubResource("BoxMesh_5lm7w")
skeleton = NodePath("../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="World/top4"]
shape = SubResource("BoxShape3D_vxusw")

[node name="smokes" type="CPUParticles3D" parent="World"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0)
visible = false
amount = 64
lifetime = 0.75
speed_scale = 1.94
mesh = SubResource("SphereMesh_6neps")
emission_shape = 3
emission_box_extents = Vector3(10, 1, 10)
direction = Vector3(0, -1, 0)
spread = 180.0
flatness = 1.0
gravity = Vector3(0, 5, 0)
scale_amount_curve = SubResource("Curve_2enan")
color_ramp = SubResource("Gradient_js6bg")

[node name="interactable" parent="." instance=ExtResource("3_8jt48")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3, 2, -6)
collision_layer = 515

[node name="marker_origin" parent="interactable" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)

[node name="civilian_system" type="Node" parent="."]
script = ExtResource("5_6peey")

[node name="DropArea" parent="civilian_system" instance=ExtResource("6_8vgsb")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7, 1.6, 6)

[node name="civilians" type="Node" parent="civilian_system"]

[node name="civilian" parent="civilian_system/civilians" instance=ExtResource("7_djlvh")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -7, 3, -4)
collision_layer = 519
collision_mask = 519
axis_lock_angular_x = true
axis_lock_angular_z = true

[node name="fire_system" type="Node" parent="."]
script = ExtResource("15_5kx7t")

[node name="fire_container" type="Node" parent="fire_system"]

[node name="cube_fire" parent="fire_system/fire_container" instance=ExtResource("16_3i5jn")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 1, -3)

[node name="cube_fire3" parent="fire_system/fire_container" instance=ExtResource("16_3i5jn")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 1, -2)
is_blue = true

[node name="cube_fire4" parent="fire_system/fire_container" instance=ExtResource("16_3i5jn")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 1, -1)

[node name="cube_fire5" parent="fire_system/fire_container" instance=ExtResource("16_3i5jn")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 1, -1)

[node name="cube_fire6" parent="fire_system/fire_container" instance=ExtResource("16_3i5jn")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 1, -2)

[node name="cube_fire2" parent="fire_system/fire_container" instance=ExtResource("16_3i5jn")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 2, -3)

[node name="cube_fire7" parent="fire_system/fire_container" instance=ExtResource("16_3i5jn")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 3, -3)

[node name="active_checker" type="Area3D" parent="fire_system"]
collision_layer = 0
collision_mask = 2048

[node name="CollisionShape3D" type="CollisionShape3D" parent="fire_system/active_checker"]
shape = SubResource("BoxShape3D_eqofl")

[node name="pcs" type="Node" parent="."]
script = ExtResource("17_clq06")

[node name="paper_piece" parent="pcs" instance=ExtResource("18_564cr")]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 7.604)

[node name="breakables" type="Node" parent="."]

[node name="breakable" parent="breakables" instance=ExtResource("20_wtn17")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 2, -6)
collision_layer = 515

[node name="PlayableCharacter" parent="." instance=ExtResource("19_i3nvy")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
script = ExtResource("14_lfhxd")

[connection signal="area_entered" from="fire_system/active_checker" to="fire_system" method="fire_alive"]
[connection signal="area_exited" from="fire_system/active_checker" to="fire_system" method="fire_killed"]

[editable path="interactable"]
